# Stellar-startup-ap

./: GETTING_STARTED.md  README.md  package-lock.json  package.json
apps/backend/: README.md  SUPABASE_SETUP.md
apps/web/: .env.local  .env.local.example  CONTRACTS_GUIDE.md  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Navbar.tsx  Onboarding.tsx  Providers.tsx  SendPayment.tsx  WalletMenu.tsx
apps/web/contexts/: SorobanContext.tsx  SupabaseContext.tsx  WalletsKitContext.tsx
apps/web/hooks/: useHelloWorld.ts  useIncrement.ts  useSoroban.ts  useSupabase.ts  useSupabaseAuth.ts  useSupabaseProfile.ts  useSupabaseRealtime.ts  useSupabaseStorage.ts  useWalletsKit.ts
apps/web/lib/: config.ts
contracts/: Cargo.toml  README.md
contracts/contracts/events-increment/: Cargo.toml  README.md
contracts/contracts/starter/: .rusty-hook.toml  Cargo.toml  README.md
contracts/contracts/starter/src/: contract.rs  lib.rs
contracts/contracts/starter/src/events/: admin.rs  mod.rs
contracts/contracts/starter/src/methods/admin/: mod.rs
contracts/contracts/starter/src/methods/public/: transfer.rs
contracts/contracts/starter/src/methods/user/: user.rs
contracts/contracts/starter/src/storage/: mod.rs
contracts/contracts/starter/src/storage/types/: error.rs  mod.rs
contracts/contracts/starter/src/tests/: contract.rs
contracts/contracts/starter/src/tests/config/: contract.rs  utils.rs
contracts/contracts/starter/src/utils/: math_operations.rs  mod.rs
(+109 files in other folders)
