[package]
name = "base-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
soroban-sdk = { version = "23.0.3" }

[dev_dependencies]
soroban-sdk = { version = "23.0.3", features = ["testutils"] }
rusty-hook = "0.11.2"

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
